--- a/main.css
+++ b/main.css
@@ -21,7 +21,6 @@
     height: 20px;
     top: 10px;
     right: 10px;
-    filter: hue-rotate(-45deg); 
 }
 .polybox .select {
     position: absolute;
@@ -41,4 +40,7 @@
 }
 .divDisplay {
     position: absolute;
+}
+:focus {
+    outline: none;
 }
