Added option to add any local audio files

--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@
     border-radius: 10px;
 }
 .polybox .exit {
-    position: absolute; 
+    position: absolute;
     width: 20px;
     height: 20px;
     top: 10px;
@@ -24,7 +24,12 @@
 }
 .polybox .select {
     position: absolute;
-    
+}
+
+.polybox .file_input {
+   position: absolute;
+   width : 100px;
+   color : transparent;
 }
 .polybox .boxtxt {
     position: absolute;
